--- a/html/dmt_plugin.html
+++ b/html/dmt_plugin.html
@@ -160,8 +160,8 @@ function <?cs var:config.plugin_pre ?>_GetInstallPluginShowInfo(idx, plugin, loc
     else
     	shtml += "<div class='pluginItem'>开源情况: 闭源</div>";
 	shtml += "<div class='pluginItem-right'>安装次数: "+plugin.open_install_times +"</div>";
-	shtml += "<div class='pluginItem'>更新时间: " + plugin.update_time + "</div>";
-	shtml += "<div class='pluginItem-right'>最新版本: " + plugin.ver + "</div>";
+	shtml += "<div class='pluginItem'>最新版本: " + plugin.ver + "</div>";
+	shtml += "<div class='pluginItem-right'>更新时间: " + plugin.update_time + "</div>";
 	shtml += "</div>";
 	shtml += "<div class='pluginDesc'><div style='margin-left:25px;float:left'>&nbsp;</div>" + plugin.desc.replace(/&br/g, "\r\n") + "</div>";
 
@@ -170,6 +170,9 @@ function <?cs var:config.plugin_pre ?>_GetInstallPluginShowInfo(idx, plugin, loc
     shtml += "</div>";
 
 	shtml += "<div style='float:left;width:120px;'>";
+	if(plugin.is_gray_version) {
+		shtml += "<font color='red' title='您是版本灰度中的用户，可使用灰度版本'>灰度版本</font>";
+	}
 	shtml += "</div>";
 
     shtml += "<div class='pluginOp'>";
