--- a/html/dmt_dlg_add_multi_tip_info.html
+++ b/html/dmt_dlg_add_multi_tip_info.html
@@ -27,7 +27,7 @@
  	5:历史累计量<br />
  	6:字符串型<br />
  	7:字符串型-IP省级<br />
- 	8: 百分比数值<br />
+ 	8: 取最新上报值<br />
  	</div>
  	<div style='margin-right:80px; float:right;'>
  	统计周期取值：<br />
