--- a/html/dmt_showview_bind_attr.html
+++ b/html/dmt_showview_bind_attr.html
@@ -31,8 +31,8 @@ function dsbaSetAttrList_<?cs var:config.view_id ?>(attrinfo)
 			list += "<td>字符串型</td>";
 		else if(listattr[i].data_type == <?cs var:config.str_report_d_ip ?>)
 			list += "<td>字符串型-IP省级</td>";
-		else if(listattr[i].data_type == <?cs var:config.data_percent ?>)
-			list += "<td>百分比数值(0-100)</td>";
+		else if(listattr[i].data_type == <?cs var:config.data_use_last ?>)
+			list += "<td>取最新上报值</td>";
 		else if(listattr[i].data_type == <?cs var:config.ex_report ?>)
 			list += "<td>异常量</td>";
 		else
@@ -99,7 +99,7 @@ $(document).ready(function(){
 						<option value="<?cs var:config.ex_report ?>">异常量</option>
 						<option value="<?cs var:config.str_report_d ?>">字符串型</option>
 						<option value="<?cs var:config.str_report_d_ip ?>">字符串型-IP省级</option>
-						<option value="<?cs var:config.data_percent ?>">百分比数值(0-100)</option>
+						<option value="<?cs var:config.data_use_last ?>">取最新上报值</option>
 					</select>
 				</li>
 
