--- a/html/dmt_machine_add_plugin.html
+++ b/html/dmt_machine_add_plugin.html
@@ -112,7 +112,7 @@ $(document).ready(function(){
             <font class='note-text'>提示：</font>
             <br />
             <ul>
-                <li class='note-text' style='margin-left:30px'>插件一键部署需要机器上安装监控 agent，且agent 为启动状态。</li>
+                <li class='note-text' style='margin-left:30px'>要部署插件请先在插件市场<font color='red'>安装插件</font>，一键部署需要机器上<font color='red'>安装监控 agent</font>，且agent 为启动状态。</li>
                 <li class='note-text' style='margin-left:30px'>如果系统信息获取不正确或者一键部署失败，请检查机器上是否支持 wget/awk/grep/sed/tar/strings 等命令。</li>
                 <li class='note-text' style='margin-left:30px'>插件一键部署过程可能<font color='red'>重启相关服务</font>，如：apache/mysql 等，请熟悉过程后再在您的生产环境操作。</li>
                 <li class='note-text' style='margin-left:30px'>插件部署过程会在 agent 的 plugin_install_log 目录下生成部署日志，您可以通过该日志了解插件部署的相关流程细节。</li>
